rozpracovan ride feature - repository a storage manager kol nejak implementovan. Dodelat ride service a otestovat pres dummy js klienta
